--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-<%= yield %>
+    <div class="container">
+      <%= render 'layouts/header' %>
+      <section class="round">
+	
+		<h1><%= @title %></h1>
+		
+        <%= yield %>
+      </section>
+    </div>
 
 </body>
 </html>
