--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,8 @@
 <html>
 <head>
   <title>LucidDreaming</title>
-  <!-- <%= stylesheet_link_tag    "application", :media => "all" %> -->
-	<%= stylesheet_link_tag :all %>
-  <!-- <%= javascript_include_tag "application" %> -->
-	<%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
 
 </head>
