--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,40 +6,79 @@
   <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
 
-	<style type="text/css" media="screen">
 
+	<!-- Le styles -->
+    <link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <style>
+      /*body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar 
+		
+      }*/
+	  body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
 
-     div#banner { 
-       position: absolute;
- 	   padding: 0px;
-       top: 0; 
-       left: 0; 
-       background-color: #DDFFFF; 
-       width: 100%;
- 	   height: 17%;
-     }
-     div#banner-content { 
-       width: 600px; 
-       margin: 0 auto; 
-		padding: 0px;
-       border: 1px solid #000;
-     }
-     div#main-content { 
-       padding-top: 140px;
-    }
+	
     </style>
+    <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+
 
 </head>
 <body>
-	<div id="banner">
-		<h1>Dreaming!</h1>
-    	<div id="banner-content">
-    		<%= render 'layouts/header' %>
-    	</div>
-  	</div>
-  <div id="main-content">
 
-  </div>
+
+	<div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/"> Lucid Dreaming</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="/about">About</a></li>
+              <li><a href="/forums">Forums</a></li>
+              <li><a href="/resources">Resources</a></li>
+			  <li>  "                      " </li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+			  <li>  "                      ""</li>
+              <li><a href="/#">Sign Up</a></li>
+              <li><a href="/#">Sign In</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
 
     <div class="container">
 
