--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,30 +1,33 @@
 
+
+
 <p>Here you will find additional resources for dreaming and becoming lucid.</p>
 
-
-<table>
-  <tr>
-	<table cellpadding="15" >
-	<th>Title</th>
-    <th>Info</th>
-    <th>Link</th>
-    <th>Admin</th>
-    <th>Admin</th>
-    <th>Admin</th>
-  </tr>
-
-<% @resources.each do |resource| %>
-  <tr>
-	<td><b><%= resource.title %></b></td>
-    <td><%= resource.info %></td>
-    <td><%= link_to 'Link', resource.link %></td>
-    <td><%= link_to 'Show', resource %></td>
-    <td><%= link_to 'Edit', edit_resource_path(resource) %></td>
-    <td><%= link_to 'Destroy', resource, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
+<div id="menu">
+	<table cellpadding="15" cellspacing="0" border="4" id="menu">
+		<thead>
+		  <tr>
+			<th>Title</th>
+		    <th>Info</th>
+		    <th>Link</th>
+		    <th>Admin</th>
+		    <th>Admin</th>
+		    <th>Admin</th>
+		  </tr>
+		</thead>
+	
+	<% @resources.each do |resource| %>
+	  <tr class="<%= cycle("unshaded", "shaded") %>">
+		<td><b><%= resource.title %></b></td>
+	    <td><%= resource.info %></td>
+	    <td><%= link_to 'Link', resource.link %></td>
+	    <td><%= link_to 'Show', resource %></td>
+	    <td><%= link_to 'Edit', edit_resource_path(resource) %></td>
+	    <td><%= link_to 'Destroy', resource, :confirm => 'Are you sure?', :method => :delete %></td>
+	  </tr>
+	<% end %>
+	</table>
+</div>
 <br />
 
 <%= link_to 'New Resource', new_resource_path %>
