--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,7 +31,7 @@
 
 		<br/>
 
-	  <p><a class="btn btn-primary btn-large">Start Dreaming Today! &raquo;</a></p>
+	  <p><a class="btn btn-primary btn-large" href="/users/sign_up">  Start Dreaming Today! &raquo;</a></p>
 
 	</div>
 
