--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/"> Lucid Dreaming</a>
+          <a class="brand" href="/"> dreamToday</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class= <%= @activeHome %> ><a href="/">Home</a></li>
