--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,3 +36,7 @@
 	</div>
 
 <% end %>
+
+<p><%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %></p>
+
+<%= puts session %>
