--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -13,6 +13,12 @@ A:link {
 <strong>Location: </strong><%=@user.location  %><br/>
 <strong>Bio: </strong><%=@user.bio  %><br/>
 
+<% if @user.screen_name != nil %>
+<strong>Twitter: </strong><%= @user.screen_name %><br/>
+<% else %>
+<p>Not connected to Twitter.</p>
+<% end %>
+
 <p class="lucid">
 <% if @user.been_lucid %> 
 	<p class="lucid"><%= @user.first_name %> has gone lucid before!</p>
